PROJECT( LuTe )
SET(VERSION 0.0.1)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_DEFINITIONS("-std=c++0x")

ADD_DEFINITIONS(-DVERSION="${VERSION}")

SET(LOCAL_CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${LOCAL_CMAKE_MODULE_PATH})

FIND_PACKAGE(X11)
FIND_PACKAGE(Freetype)
FIND_PACKAGE(Fontconfig)

ADD_DEFINITIONS(-Wno-write-strings)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${FREETYPE_INCLUDE_DIRS}
    ${X11_INCLUDE_DIR}
    ${FONTCONFIG_INCLUDE_DIR}
)

SET( LUTE_SRC
    src/main.cpp
)

ADD_EXECUTABLE( lute ${LUTE_SRC} )

TARGET_LINK_LIBRARIES( lute ${FREETYPE_LIBRARIES} ${FONTCONFIG_LIBRARIES} ${X11_Xft_LIB} ${X11_X11_LIB} -lm -lutil -lrt)

# INSTALL( TARGETS kde4project  ${INSTALL_TARGETS_DEFAULT_ARGS} )